Add SCSS preprocessor options, update dependencies, and enhance README with JTB warnings

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,9 +1,1 @@
-// @use "node_modules/nk_jtb/src/variables/base" as * with (
-//     $text: rgb(228, 232, 236),
-//     $background: #0b101d,
-//     $primary: #2876dc,
-//     $secondary: #e1e1df,
-//     $accent: #e6c637
-// );
-
-@use "node_modules/nk_jtb/src/jtb";
+@use 'nk_jtb/src/jtb';
